[tool.poetry]
name = "item-drop-probability-calculator"
version = "1.0.0"
description = "Item Drop Probability Calculator"
authors = ["RLAlpha49 <75044176+RLAlpha49@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.43.2"
scipy = "^1.15.2"
matplotlib = "^3.10.1"
xlsxwriter = "^3.2.2"

[tool.poetry.dev-dependencies]
ruff = "^0.10.0"
mypy = "^1.15.0"

[tool.ruff]
line-length = 120

[tool.mypy]
ignore_missing_imports = true
disable_error_code = "attr-defined"