[tool.poetry]
name = "item-drop-probability-calculator"
version = "1.0.0"
description = "Item Drop Probability Calculator"
authors = ["RLAlpha49 <75044176+RLAlpha49@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.46.1"
scipy = "^1.15.3"
xlsxwriter = "^3.2.5"
numpy = "^2.3.1"
pandas = "^2.3.1"
altair = "^5.5.0"

[tool.poetry.dev-dependencies]
ruff = "^0.12.1"
mypy = "^1.16.1"

[tool.ruff]
line-length = 120

[tool.mypy]
ignore_missing_imports = true
disable_error_code = "attr-defined"